# pythonwordle

./: README.md
server/: .env  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 34abf8b4f1c4_create_challenge_table.py  545247292336_create_user_table.py
