[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["isaacdenny <isaacquinndenny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
