[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["isaacdenny <isaacquinndenny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
alembic = "^1.9.1"
python-dotenv = "^0.21.0"
jinja2 = "^3.1.2"
aiofiles = "^22.1.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
